[package]
name = "drrt-livestream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
dotenvy = "0.15.7"
obws = "0.11.2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"
